force-app/main/default/objects/Borrowed_Books__c/Borrowed_Books__c.object-meta.xml
<CustomObject>
    <description>Borrowed_Books</description>
    <label>Borrowed Books</label>
    <nameField>
        <label>Borrowed_Books Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Borrowed_Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>