force-app/main/default/objects/Borrowed_Books__c/fields/Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Book_ID__c</fullName>
    <label>Book_ID</label>
    <referenceTo>Books__c</referenceTo>
    <relationshipLabel>Borrowed_Books</relationshipLabel>
    <relationshipName>Borrowed_Books</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>