force-app/main/default/objects/Borrowed_Books__c/fields/Borrowed_Date__c.field-meta.xml
<CustomField>
    <fullName>Borrowed_Date__c</fullName>
    <label>Borrowed Date</label>
    <type>Date</type>
</CustomField>