force-app/main/default/objects/Borrowed_Books__c/fields/IssuedForDays__c.field-meta.xml
<CustomField>
    <fullName>IssuedForDays__c</fullName>
    <label>IssuedForDays</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>