force-app/main/default/objects/Borrowed_Books__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <label>Member_ID</label>
    <referenceTo>Members__c</referenceTo>
    <relationshipLabel>Borrowed_Books</relationshipLabel>
    <relationshipName>Borrowed_Books</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>