force-app/main/default/objects/Borrowed_Books__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <defaultValue>TODAY() +15</defaultValue>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>