force-app/main/default/objects/Borrowed_Books__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book_ID__c</columns>
    <columns>Member_ID__c</columns>
    <columns>Borrowed_Date__c</columns>
    <columns>Return_Date__c</columns>
    <columns>Actual_Return_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>